# FileHandler

./: README.md  pyproject.toml
src/file_handler/: README.md  handler.py  type.py
